# rust-real-time-index

./: .env.exmaple  Cargo.toml  README.md  realtime_index_create.sql  realtime_index_data.sql
src/: app.rs  main.rs
src/core/: exchange_factory.rs  exchange_manager.rs  index_calculator.rs  mod.rs  model.rs  trade_repository.rs  websocket_listener.rs
src/core/db/: config_repository.rs  db_config.rs  mod.rs
src/core/exchange/: exchange_factory.rs  exchange_initializer.rs  exchange_manager.rs  mod.rs
src/core/index/: calculator_manager.rs  index_calculator.rs  mod.rs
src/core/trade/: mod.rs
src/core/ws/: websocket_listener.rs
src/exchanges/: mod.rs
src/exchanges/binance/: client.rs
src/exchanges/bitget/: client.rs  model.rs
src/exchanges/okex/: client.rs
src/tasks/: index_calculator_task.rs  kline_saver.rs  market_printer.rs  mod.rs  price_updater.rs  run_index_calculator.rs
