[package]
name = "rust-real-time-index"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = {version = "0.28.0", features = ["rustls-tls-native-roots"]}
tungstenite = "0.28.0"
dashmap = "6.1.0"
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
log = "0.4.25"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
dotenv = "0.15.0"
chrono = {version = "0.4.41", features = ["serde"]}
base64 = "0.22.1"
futures = "0.3.31"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
deadpool-redis = "0.22.0"
#rocketmq-rust = "0.6.0"
zookeeper = "0.8.0"
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
async-trait = "0.1.89"
rust_decimal = {version = "1.34.0", features = ["db-postgres"]}